First own model word2vec

--- a/Semantic_connection_words.ipynb
+++ b/Semantic_connection_words.ipynb
@@ -11,6 +11,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from operator import itemgetter\n",
+    "import pickle\n",
     "\n",
     "import pymorphy2 \n",
     "import gensim\n",
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -60,6 +61,7 @@
        "      <th></th>\n",
        "      <th>word1</th>\n",
        "      <th>word2</th>\n",
+       "      <th>sim</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -67,23 +69,25 @@
        "      <th>220</th>\n",
        "      <td>начало</td>\n",
        "      <td>матч</td>\n",
+       "      <td>0.242424</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>369</th>\n",
        "      <td>начало</td>\n",
        "      <td>год</td>\n",
+       "      <td>0.303030</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      word1 word2\n",
-       "220  начало  матч\n",
-       "369  начало   год"
+       "      word1 word2       sim\n",
+       "220  начало  матч  0.242424\n",
+       "369  начало   год  0.303030"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,26 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "начинать_VERB\n"
-     ]
-    }
-   ],
-   "source": [
-    "print normal_analizer.norm('начать')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -132,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -194,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -224,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -239,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -258,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -302,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -317,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -343,7 +328,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def predict_myModel(model, data):\n",
+    "    predict = []\n",
+    "    undefinded = []\n",
+    "    for item in data.values:\n",
+    "        word1 = normal_analizer.norm(item[0]).split('_')[0].upper().encode('utf-8')\n",
+    "        word2 = normal_analizer.norm(item[1]).split('_')[0].upper().encode('utf-8')\n",
+    "        try:\n",
+    "            predict.append(model.similarity(word1, word2))\n",
+    "        except:\n",
+    "            undefinded.append([word1, word2])\n",
+    "            predict.append(0)\n",
+    "    return predict, undefinded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -845,7 +852,7 @@
     "|Корпус|Объем словаря|Частотный порог|Алгоритм|Размерность вектора|Размер окна|MSE + нормализация|MSE|Корреляция Спирмена|Кол-во ненайденных пар|\n",
     "| :-: | :-: |:-: |:-: |:-: |:-: | :-: | :-: | :-: | :-: |\n",
     "| НКРЯ | 250 миллионов слов | 10 | Skip-gramm | 300 | 10 | 0.04015 | 0.03680 | 0.68503 | 2 |\n",
-    "| Wiki | 600 миллионов слов | 15 | CBOW | 300 | 20 | 0.04116 | 0.05098 | 0.68503 | 2 |\n",
+    "| Wiki | 600 миллионов слов | 15 | CBOW | 300 | 20 | 0.04116 | 0.05098 | 0.64134 | 2 |\n",
     "| Web | 900 миллионов слов | 30 | CBOW | 300 | 20 | 0.04005 | 0.05394 | 0.64112 | 2 |\n",
     "| News | 5 миллиардов слов | 200 | CBOW | 300 | 2 | 0.04891 | 0.07278 | 0.58992 | 2 |"
    ]
@@ -860,13 +867,217 @@
     "2. Если смотреть на отклонения от значений, то можно сказать, что нормализация предсказаний дает сильное улучшение на большинстве корпусах. Это логично, так как одна максимально синонимичная пара, не входящая в тестовый датасет, уменьшает значения схожести другим парам. \n",
     "<p>\n",
     "<p>\n",
-    "3. Опираясь на количество ненайденных пар, можно сделать вывод, что использование новостного корпуса не лучшая идея. Высокий частотный порог news (на порядок больше других корпусов) выбрасывает весомую часть нашей тестовой выборки из свого словаря и, как следствие, не может предсказать их семантическую близость.\n",
+    "3. На данный момент мы не можем сказать, насколько сильно влияет выбор алгоритма (CBOW и Skip-gramm), размер окна и размер вектора, так как нет сравнений конкретно по каждому параметру, ипользуя один корпус.\n",
     "<p>\n",
     "<p>\n",
-    "4. На данный момент мы не можем сказать, насколько сильно влияет выбор алгоритма (CBOW и Skip-gramm), размер окна и размер вектора, так как нет сравнений конкретно по каждому параметру, ипользуя один корпус.\n",
-    "<p>\n",
-    "<p>\n",
-    "5. И на последок, word2vec неплохо справляется со своей задачей. Постараемся улучшить качество, используя дополненительно  словари Тезаурус"
+    "4. И на последок, word2vec неплохо справляется со своей задачей. Постараемся улучшить качество, используя дополненительно  словари Тезаурус"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Создание своей модели Word2Vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Считывание из файла N слов и формирование предложение по 5000 символов в каждом\n",
+    "def getNwords(ffile, last_word='', N=1000000):\n",
+    "    words = []\n",
+    "    n_words = 0\n",
+    "    flag_EOF = False\n",
+    "    while (n_words < N):\n",
+    "        s = ffile.read(5000) # считываю по 5000 символов и разбиваю их на слова\n",
+    "        if len(s) < 5000:\n",
+    "            # если осталось < 5000 символов == конец файла\n",
+    "            s = last_word + s\n",
+    "            currently_words = s.split(' ')\n",
+    "            words.append(currently_words)\n",
+    "            flag_EOF = True\n",
+    "            break\n",
+    "            \n",
+    "        s = last_word + s\n",
+    "        currently_words = s.split(' ')\n",
+    "        n_words += len(currently_words) - 1\n",
+    "        words.append(currently_words[:-1])\n",
+    "        last_word = currently_words[-1]\n",
+    "        \n",
+    "    return words, last_word, flag_EOF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step: 0\n",
+      "Step: 1\n",
+      "Step: 2\n",
+      "Step: 3\n",
+      "Step: 4\n",
+      "Step: 5\n",
+      "Step: 6\n",
+      "Step: 7\n",
+      "Step: 8\n",
+      "Step: 9\n",
+      "Step: 10\n",
+      "Step: 11\n",
+      "Step: 12\n",
+      "Step: 13\n",
+      "Step: 14\n",
+      "Step: 15\n",
+      "Step: 16\n",
+      "Step: 17\n",
+      "Step: 18\n",
+      "Step: 19\n",
+      "Step: 20\n",
+      "Step: 21\n",
+      "Step: 22\n",
+      "Step: 23\n",
+      "Step: 24\n",
+      "Step: 25\n",
+      "Step: 26\n",
+      "Step: 27\n",
+      "Step: 28\n",
+      "Step: 29\n",
+      "Step: 30\n",
+      "Step: 31\n",
+      "Step: 32\n",
+      "Step: 33\n",
+      "Step: 34\n",
+      "Step: 35\n",
+      "Step: 36\n",
+      "Step: 37\n",
+      "Step: 38\n",
+      "Step: 39\n",
+      "Step: 40\n",
+      "Step: 41\n",
+      "Step: 42\n",
+      "Step: 43\n",
+      "Step: 44\n"
+     ]
+    }
+   ],
+   "source": [
+    "# разбиваем на пакеты по 10.000.000 слов и обучаем модель на очередной партии\n",
+    "file_text = open('./data/global_text.txt')\n",
+    "last_word = ''\n",
+    "model = gensim.models.word2vec.Word2Vec(iter=1, min_count=1)\n",
+    "\n",
+    "i = 0\n",
+    "while(True):\n",
+    "    words, last_word, flag_EOF = getNwords(file_text, last_word, 10000000)\n",
+    "    \n",
+    "#     with open(os.path.join('./words/', str(i)), 'w') as output:\n",
+    "#         words_pickle = pickle.dumps(words)\n",
+    "#         output.write(words_pickle)\n",
+    "\n",
+    "    if i == 0:\n",
+    "        model.build_vocab(words)\n",
+    "    else:\n",
+    "        model.train(words)\n",
+    "    \n",
+    "    print \"Step: %d\" %i\n",
+    "    i += 1\n",
+    "    \n",
+    "    if flag_EOF:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "МЕДВЕДЬ\n",
+      "ОЛЕНЬ\n",
+      "ЛИС\n",
+      "ВОЛК\n",
+      "РЫСЬ\n",
+      "ЛОСЬ\n",
+      "ИРБИС\n",
+      "ХИЩНИК\n",
+      "ЗВЕРЬ\n",
+      "КОСУЛЯ\n"
+     ]
+    }
+   ],
+   "source": [
+    "# проверка работы\n",
+    "for word in model.most_similar('ТИГР'):\n",
+    "    print word[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  __ Предсказания первой модели близости пар нашего датасета __\n",
+    "predicts, undefinded = predict_myModel(model, data)\n",
+    "\n",
+    "# __ Вывод ненайденных пар __\n",
+    "# print_undefined(undefinded)\n",
+    "print len(undefinded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Нормализованные предсказания: \n",
+      "0.0493730887131\n",
+      "\n",
+      "Абсолютные предсказания: \n",
+      "0.0567040556829\n",
+      "\n",
+      "Spearman rank correlation: \n",
+      "0.556238059858\n"
+     ]
+    }
+   ],
+   "source": [
+    "# __ Оцениваем близость предсказаний по размеченным данным __\n",
+    "print_accuracy(predicts, y)"
    ]
   },
   {
