Add a few corps

--- a/Semantic_connection_words.ipynb
+++ b/Semantic_connection_words.ipynb
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -1423,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -1518,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -1573,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -1660,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -1676,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -1696,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -1729,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -1745,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -1777,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -1900,18 +1900,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "class Retrofitting():\n",
-    "    def __init__(self, n_iter=5, alpha=1.0, betta=0.1, coef_relat=0.3):\n",
+    "    def __init__(self, n_iter=5, alpha=1.0, betta=0.1, coef_relat=0.3, type_corp='rusCorp'):\n",
     "        self.n_iter = n_iter  # __ количество итераций алгоритма fit __\n",
     "        self.alpha = alpha\n",
     "        self.betta = betta\n",
     "        self.coef_relat = coef_relat\n",
+    "        self.type_corp = type_corp\n",
     "        \n",
     "    def fit(self, model, id_name, name_id, synonyms, relations):\n",
     "        self.model = model\n",
@@ -1921,7 +1922,10 @@
     "        for (name, id_word) in name_id.items():\n",
     "            w2v = []\n",
     "            try:\n",
-    "                w2v = model.wv[name.encode('utf8')]\n",
+    "                if self.type_corp == 'rusCorp':\n",
+    "                    w2v = model.word_vec(normal_analizer.norm(name.lower().encode('utf8')))\n",
+    "                else:\n",
+    "                    w2v = model.wv[name.encode('utf8')]\n",
     "            except:\n",
     "                pass\n",
     "            if len(w2v) != 0:\n",
@@ -1972,11 +1976,7 @@
     "                        if relation in id_name and id_name[relation] in name_fitted:\n",
     "                            sum_syn_betta += self.betta * betta * name_fitted[id_name[relation]]\n",
     "                            sum_betta += self.betta * betta\n",
-    "\n",
-    "#                 if i > 10:\n",
-    "#                     break\n",
-    "#                 i += 1\n",
-    "    \n",
+    "                            \n",
     "                tmp_name_fitted[name] = (sum_syn_betta + self.alpha * name_w2v[name]) / (sum_betta + self.alpha)\n",
     "                \n",
     "            name_fitted = tmp_name_fitted.copy()\n",
@@ -1993,16 +1993,130 @@
     "            return 1 - spatial.distance.cosine(word1_vec, word2_vec)\n",
     "        else:\n",
     "            try:\n",
-    "                value = self.model.similarity(word1.encode('utf8'), word2.encode('utf8'))\n",
+    "                if self.type_corp == 'rusCorp':\n",
+    "                    value = self.model.similarity(normal_analizer.norm(word1.lower().encode('utf8')), normal_analizer.norm(word2.lower().encode('utf8')))\n",
+    "                else:\n",
+    "                    value = self.model.similarity(word1.encode('utf8'), word2.encode('utf8'))\n",
     "                return value\n",
     "            except:\n",
-    "                print word1, word2\n",
     "                return 0"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Тест на разных корпусах"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    1. Собственный корпус"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "model = gensim.models.Word2Vec.load('./myModel/myModel')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "retrofitting = Retrofitting()\n",
+    "retrofitting = retrofitting.fit(model, id_name, name_id, synonyms, relations, type_corp='my')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Нормализованные предсказания: \n",
+      "0.0381463818612\n",
+      "\n",
+      "Абсолютные предсказания: \n",
+      "0.0342830399711\n",
+      "\n",
+      "Spearman rank correlation: \n",
+      "0.691371233592\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  __ Предсказания модели с постобучением __\n",
+    "predicts, undefinded = predict_myModel(retrofitting, data)\n",
+    "print_accuracy(np.array(predicts), y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Нормализованные предсказания: \n",
+      "0.040152472329\n",
+      "\n",
+      "Абсолютные предсказания: \n",
+      "0.0367998209608\n",
+      "\n",
+      "Spearman rank correlation: \n",
+      "0.68503439607\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  __ Предсказания только word2vec __\n",
+    "predicts, undefinded = predict(model, data)\n",
+    "print_accuracy(predicts, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    2. НКРЯ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "model = gensim.models.KeyedVectors.load_word2vec_format('./courps/ruscorpora.bin', binary=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -2014,53 +2128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.391348009099\n"
-     ]
-    }
-   ],
-   "source": [
-    "print retrofitting.similarity('МАГ', 'ВОЛШЕБНИК')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "МОРЕПРОДУКТ ОМАР\n",
-      "МОРЕПРОДУКТ МОР\n",
-      "БЛЯДЬ СЕКС\n",
-      "МОРЕПРОДУКТ ЕДА\n",
-      "БАКАЛЕЯ ДЕНЬГА\n"
-     ]
-    }
-   ],
-   "source": [
-    "#  __ Предсказания модели с постобучением __\n",
-    "predicts, undefinded = predict_myModel(retrofitting, data)\n",
-    "\n",
-    "# __ Вывод ненайденных пар __\n",
-    "# print_undefined(undefinded)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -2070,24 +2138,25 @@
      "output_type": "stream",
      "text": [
       "Нормализованные предсказания: \n",
-      "0.0562254908466\n",
+      "0.0381463818612\n",
       "\n",
       "Абсолютные предсказания: \n",
-      "0.0492591884369\n",
+      "0.0342830399711\n",
       "\n",
       "Spearman rank correlation: \n",
-      "0.65148741098\n"
+      "0.691371233592\n"
      ]
     }
    ],
    "source": [
-    "# __ Оцениваем близость предсказаний по размеченным данным __\n",
+    "#  __ Предсказания модели с постобучением __\n",
+    "predicts, undefinded = predict_myModel(retrofitting, data)\n",
     "print_accuracy(np.array(predicts), y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -2097,34 +2166,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Список ненайденных пар:\n",
+      "Нормализованные предсказания: \n",
+      "0.040152472329\n",
       "\n",
-      "МОРЕПРОДУКТ - ОМАР\n",
-      "МОРЕПРОДУКТ - МОР\n",
-      "БЛЯДЬ - СЕКС\n",
-      "МОРЕПРОДУКТ - ЕДА\n",
-      "БАКАЛЕЯ - ДЕНЬГА\n",
+      "Абсолютные предсказания: \n",
+      "0.0367998209608\n",
       "\n",
-      "Всего не найдено: 5\n",
-      "5\n"
+      "Spearman rank correlation: \n",
+      "0.68503439607\n"
      ]
     }
    ],
    "source": [
     "#  __ Предсказания только word2vec __\n",
-    "predicts, undefinded = predict_myModel(model, data)\n",
-    "\n",
-    "# __ Вывод ненайденных пар __\n",
-    "print_undefined(undefinded)\n",
-    "print len(undefinded)"
+    "predicts, undefinded = predict(model, data)\n",
+    "print_accuracy(predicts, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    3. Веб"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 96,
    "metadata": {
-    "collapsed": false,
-    "scrolled": false
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "model = gensim.models.KeyedVectors.load_word2vec_format('./courps/web.bin', binary=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "retrofitting = Retrofitting()\n",
+    "retrofitting = retrofitting.fit(model, id_name, name_id, synonyms, relations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2132,18 +2225,222 @@
      "output_type": "stream",
      "text": [
       "Нормализованные предсказания: \n",
-      "0.0601722370905\n",
+      "0.0389179510811\n",
       "\n",
       "Абсолютные предсказания: \n",
-      "0.0561642789093\n",
+      "0.0505310898752\n",
       "\n",
       "Spearman rank correlation: \n",
-      "0.645451619434\n"
+      "0.650160796072\n"
      ]
     }
    ],
    "source": [
-    "# __ Оцениваем близость предсказаний по размеченным данным __\n",
+    "#  __ Предсказания модели с постобучением __\n",
+    "predicts, undefinded = predict_myModel(retrofitting, data)\n",
+    "print_accuracy(np.array(predicts), y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Нормализованные предсказания: \n",
+      "0.0400544907362\n",
+      "\n",
+      "Абсолютные предсказания: \n",
+      "0.0539420002041\n",
+      "\n",
+      "Spearman rank correlation: \n",
+      "0.641116495043\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  __ Предсказания только word2vec __\n",
+    "predicts, undefinded = predict(model, data)\n",
+    "print_accuracy(predicts, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    4. НКРЯ + wiki"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "model = gensim.models.KeyedVectors.load_word2vec_format('./courps/ruwikiruscorpora.bin', binary=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "retrofitting = Retrofitting()\n",
+    "retrofitting = retrofitting.fit(model, id_name, name_id, synonyms, relations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Нормализованные предсказания: \n",
+      "0.0397312951382\n",
+      "\n",
+      "Абсолютные предсказания: \n",
+      "0.0482400414759\n",
+      "\n",
+      "Spearman rank correlation: \n",
+      "0.646090889172\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  __ Предсказания модели с постобучением __\n",
+    "predicts, undefinded = predict_myModel(retrofitting, data)\n",
+    "print_accuracy(np.array(predicts), y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Нормализованные предсказания: \n",
+      "0.0411610078923\n",
+      "\n",
+      "Абсолютные предсказания: \n",
+      "0.0509819300554\n",
+      "\n",
+      "Spearman rank correlation: \n",
+      "0.641340046202\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  __ Предсказания только word2vec __\n",
+    "predicts, undefinded = predict(model, data)\n",
+    "print_accuracy(predicts, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    5. Новостной"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model = gensim.models.KeyedVectors.load_word2vec_format('./courps/news.bin', binary=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "retrofitting = Retrofitting()\n",
+    "retrofitting = retrofitting.fit(model, id_name, name_id, synonyms, relations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Нормализованные предсказания: \n",
+      "0.0469847190446\n",
+      "\n",
+      "Абсолютные предсказания: \n",
+      "0.0676276873849\n",
+      "\n",
+      "Spearman rank correlation: \n",
+      "0.599856263121\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  __ Предсказания модели с постобучением __\n",
+    "predicts, undefinded = predict_myModel(retrofitting, data)\n",
+    "print_accuracy(np.array(predicts), y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Нормализованные предсказания: \n",
+      "0.0489090111169\n",
+      "\n",
+      "Абсолютные предсказания: \n",
+      "0.0727769463928\n",
+      "\n",
+      "Spearman rank correlation: \n",
+      "0.589919280802\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  __ Предсказания только word2vec __\n",
+    "predicts, undefinded = predict(model, data)\n",
     "print_accuracy(predicts, y)"
    ]
   },
@@ -2162,8 +2459,11 @@
    "source": [
     "|Модель|MSE + нормализация|MSE|Корреляция Спирмена|Кол-во ненайденных пар|\n",
     "| :-: | :-: |:-: |:-: |:-: |\n",
-    "| word2vec | 0.06017 | 0.05616 | 0.64545 | 5 |\n",
-    "| retrofitting | 0.05623 | 0.04926 | 0.65149 | 5 |"
+    "|My| 0.05623 vs 0.06017 |0.04926 vs 0.05616 | 0.65149 vs 0.64545 | 5 |\n",
+    "| НКРЯ | 0.03814 vs 0.04015 | 0.03428 vs 0.03680 | 0.69137 vs 0.68503 | 2 |\n",
+    "| НКРЯ + wiki |0.03973 vs 0.04116 |0.04824 vs 0.05098  |0.64609 vs 0.64134 | 2 |\n",
+    "| Веб |0.03892 vs 0.04005 |0.05053 vs 0.05394 |0.65016 vs 0.64112 | 2 |\n",
+    "| Новости |0.04698 vs 0.04891 |0.06763 vs 0.07278  |0.59986 vs 0.58992 | 2 |\n"
    ]
   },
   {
